[metadata]
name = visual-clustering
version = 1.0.0
author = Tarek Naous
author_email = tareknaous@gmail.com
description = An implementation of the Visual Clustering algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tareknaous/visual-clustering
project_urls =
    Bug Tracker = https://github.com/tareknaous/visual-clustering
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src